# ocaml-exercises

./: .gitignore  readme.md
Lists/: dune-project
Lists/src/: dune  duplicate.ml  insertAt.ml  lastTwo.ml  lengthList.ml  nthList.ml  palindrome.ml  removeAt.ml  reverseList.ml  runLengthEnc.ml  splitList.ml  tailOfList.ml
Lists/test/: dune  duplicateTest.ml  insertAtTest.ml  lastTwoTest.ml  lengthListTest.ml  nthListTest.ml  palindromeTest.ml  removeAtTest.ml  reverseListTest.ml  runLengthEncTest.ml  splitListTest.ml  tailOfListTest.ml
