(test
 (name tailOfListTest)
 (libraries tailOfList oUnit)
 (modules tailOfListTest))

(test
 (name lastTwoTest)
 (libraries lastTwo oUnit)
 (modules lastTwoTest))

(test
 (name nthListTest)
 (libraries nthList oUnit)
 (modules nthListTest))

(test
 (name lengthListTest)
 (libraries lengthList oUnit)
 (modules lengthListTest))

(test
 (name palindromeTest)
 (libraries palindrome oUnit)
 (modules palindromeTest))

(test
 (name runLengthEncTest)
 (libraries runLengthEnc oUnit)
 (modules runLengthEncTest))

(test
 (name reverseListTest)
 (libraries reverseList oUnit)
 (modules reverseListTest))

(test
 (name duplicateTest)
 (libraries duplicate oUnit)
 (modules duplicateTest))

(test
 (name splitListTest)
 (libraries splitList oUnit)
 (modules splitListTest))

(test
 (name removeAtTest)
 (libraries removeAt oUnit)
 (modules removeAtTest))
